--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -52,9 +52,9 @@ ja:
     - 金曜日
     - 土曜日
     formats:
-      default: "%Y/%m/%d"
+      default: "%Y/%m/%d %H:%M:%S"
       long: "%Y年%m月%d日(%a)"
-      short: "%m/%d"
+      short: "%m/%d %H:%M"
     month_names:
     -
     - 1月
