--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -7,3 +7,7 @@ ja:
         title: タスク名
         content: 内容
         created_at: 作成日時
+        updated_at: 更新日時
+        priority: 優先度
+        time_limit: 期限
+        status: 状態
