--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -11,6 +11,10 @@ ja:
     sort_by_timelimit: 終了期限で並べ替える
     enter_title: タスク名を入力
     do_a_serch: 検索
+    serch_status: 状態選択
+    waiting: 未着手
+    working: 着手中
+    completed: 完了
   notice:
     new: タスクが追加されました！
     edit: タスクが編集されました！
