--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -39,8 +39,10 @@ ja:
       admin_user:
         index: ユーザー管理一覧画面
         edit: ユーザー編集
+        have_task_counts: タスク数
+        login: 管理者としてログイン中
       label:
-        index: ラベル一覧
+        index: ラベル管理一覧画面
         new: 新規ラベル作成
         edit: ラベル編集
   activerecord:
